[gd_scene load_steps=2 format=3 uid="uid://qt7lrw2sf77s"]

[ext_resource type="Script" uid="uid://cdkwu0j1lngvb" path="res://screens/level_select/level_select.gd" id="1_kd0iq"]

[node name="level_select" type="Node2D"]
script = ExtResource("1_kd0iq")

[node name="lvl" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 276.0
offset_bottom = 39.0
scale = Vector2(2, 2)
theme_override_font_sizes/font_size = 30
text = "Unknown Monuments to Explore:"

[node name="tut" type="Button" parent="."]
offset_left = 256.0
offset_top = 256.0
offset_right = 384.0
offset_bottom = 320.0
scale = Vector2(2, 2)
theme_override_font_sizes/font_size = 30
text = "Tutorial"

[node name="lv1" type="Button" parent="."]
offset_left = 512.0
offset_top = 256.0
offset_right = 640.0
offset_bottom = 320.0
scale = Vector2(2, 2)
theme_override_font_sizes/font_size = 30
text = "Level 1
Castle"

[node name="lv2" type="Button" parent="."]
offset_left = 768.0
offset_top = 256.0
offset_right = 896.0
offset_bottom = 320.0
scale = Vector2(2, 2)
theme_override_font_sizes/font_size = 30
text = "Level 2
Park"

[node name="back" type="Button" parent="."]
offset_left = 16.0
offset_top = 640.0
offset_right = 72.0
offset_bottom = 672.0
scale = Vector2(2, 2)
focus_mode = 0
text = "Back"

[connection signal="pressed" from="tut" to="." method="_on_tut_pressed"]
[connection signal="pressed" from="lv1" to="." method="_on_lv_1_pressed"]
[connection signal="pressed" from="lv2" to="." method="_on_lv_2_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
